--- a/docker/Dockerfile.latest
+++ b/docker/Dockerfile.latest
@@ -5,6 +5,7 @@ ARG TZ='Asia/Shanghai'
 
 ARG CHATGPT_ON_WECHAT_VER
 
+RUN touch /etc/apt/sources.list
 RUN echo /etc/apt/sources.list
 RUN sed -i 's/deb.debian.org/mirrors.tuna.tsinghua.edu.cn/g' /etc/apt/sources.list
 ENV BUILD_PREFIX=/app
